@@ -1,3 +1,8 @@
+2009-03-20  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>
+
+	* matchbox/core/mb-wm-decor.c (mb_wm_decor_button_press_handler): Fix
+	a memory leak in freeing the list of transients.
+
 2009-03-20  Adam Endrodi  <adam.endrodi@blumsoft.eu>
 
 	* matchbox/comp-mgr/mb-wm-comp-mgr.c:
